# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "firstproject"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Herdis Haerusalam <herdissam@gmail.com>" ]
description = "for submitting task 2"

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
